templates/style.css
.container {
  width: 960px !important;
}

.header.lvl1 {
  width: 100%;
  height: 40px;
  background-color: #1F1F1F;
  color: white;
}

.header.lvl2 {
  width: 100%;
  height: 40px;
  color: white;
}

.header.for-teachers {
  background-color: #8657AB;
}

.header.for-students {
  background-color: #1C42A3;
}

.header ul {
  padding-left: 0px;
}

.header li {
  list-style: none;
  float: left;
  line-height: 40px;
  margin: 0px 15px;
  font-family: sans-serif;
  font-weight: bolder;
}

.header li i {
  font-weight: normal;
}

.header .badge {
  background-color: transparent;
  border: 1px solid white;
}

.header .login {
  line-height: 40px;
  font-family: sans-serif;
  font-weight: bolder;
}

